--- a/src/Web.WebApp/Components/FileUploader/FileUploader.razor
+++ b/src/Web.WebApp/Components/FileUploader/FileUploader.razor
@@ -89,7 +89,7 @@
         var files = e.GetMultipleFiles(10);
         if (!files.Any()) return;
         invalidFiles.Clear();
-        // Why it's clear, BrowserFile is just a pointer to the input file.
+        // Why clear, BrowserFile is just a pointer to the input file.
         browserFiles.Clear();
         foreach(var file in files.DistinctBy(x => x.Name))
         {
