--- a/src/Web.WebApp/Components/FileUploader/FileUploaderPreviewDialog.razor
+++ b/src/Web.WebApp/Components/FileUploader/FileUploaderPreviewDialog.razor
@@ -14,8 +14,10 @@
         </div>
     </DialogContent>
     <DialogActions>
+        @if (OnRemove.HasDelegate) {
         <AppButton Color="Color.Error"  OnClick="OnRemoveClicked" IsOutline="true"
-            IsDisabled="@(File.BowserFile != null)" Icon="@Icons.Filled.DeleteForever" Text="Delete" />
+            IsDisabled="@(File.BrowserFile != null)" Icon="@Icons.Filled.DeleteForever" Text="Delete" />
+        }
         <MudSpacer />
         @if (!string.IsNullOrEmpty(DownloadUrl))
         {
@@ -62,7 +64,8 @@
         var ext = Path.GetExtension(File.FileName);
         isImage = imageExtensions.Contains(ext);
 
-        if (File.BowserFile == null)
+        // display uploaded file
+        if (File.BrowserFile == null)
         {
             DownloadUrl = FileDirectoryProvider.GetAttachmentUrl(File.FileName, NavigationManager.BaseUri);
             if (isImage)
@@ -70,10 +73,12 @@
                 showLoading = true;
                 ImageSrc = DownloadUrl;
             }
-        } else
+        }
+        // new upload, display after render
+        else
         {
             ImageSrc = FileDirectoryProvider.GetAssetFileUrl("image-placeholder-small.png", NavigationManager.BaseUri);
-            DownloadUrl = "#";
+            DownloadUrl = string.Empty;
         }
     }
 
@@ -81,21 +86,21 @@
     {
         if (!firstRender) return;
 
-        if (File.BowserFile != null)
+        if (File.BrowserFile != null)
         {
             try
             {
-                var jsImageStream = File.BowserFile.OpenReadStream(File.BowserFile.Size);
-                var dotnetStream = new DotNetStreamReference(jsImageStream);
                 var jsObject = await JSRuntime.InvokeAsync<IJSObjectReference>("import", "./Components/FileUploader/FileUploaderPreviewDialog.razor.js");
+                var jsImageStream = File.BrowserFile.OpenReadStream();
+                var dotnetStream = new DotNetStreamReference(jsImageStream);
                 await jsObject.InvokeVoidAsync("fileUploaderImagePreview", dotnetStream,
-                    fileUploderPreviewImage, fileUploderPreviewDownload, File.BowserFile.Name, isImage);
+                    fileUploderPreviewImage, fileUploderPreviewDownload, File.BrowserFile.Name, isImage);
+
             }
             catch(Exception)
             {
-                // ignored
+                 // ignored
             }
-
         }
     }
 
@@ -105,6 +110,7 @@
         {
             await OnRemove.InvokeAsync(File);
         }
+        MudDialog.Cancel();
     }
     private void OnCloseClicked() => MudDialog.Cancel();
 }
