--- a/src/Web.WebApp/Pages/Category/CategoryPage.razor
+++ b/src/Web.WebApp/Pages/Category/CategoryPage.razor
@@ -34,8 +34,12 @@
             </HeaderContent>
             <RowTemplate>
                 <MudTd DataLabel="Name">
-                    <img src="@context.Icon.IconUrl" height="24" width="24" class="mr-2" /> &nbsp;
-                    @context.Name
+                        @if (context.Icon != null)
+                        {
+                            <img src="@context.Icon.IconUrl" height="24" width="24" class="mr-2" />
+                            <span>&nbsp;</span>
+                        }
+                    <span>@context.Name</span>
                 </MudTd>
                 <MudTd DataLabel="Actions">
                     <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" aria-label="edit"
